--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamdori Bus</title>
+    <title>GAMDORI</title>
+
+    <!-- 버스 이모지 파비콘 -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚌</text></svg>">
 </head>
 <body>
 <div id="root"></div> <!-- React mount 위치 -->
